README.html: replace repo URL

--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <p>Please visit the shUnit2 website at <a href="http://code.google.com/p/shunit2/">http://code.google.com/p/shunit2/</a>.</p>
+  <p>Please visit the shUnit2 website at <a href="https://github.com/kward/shunit2">https://github.com/kward/shunit2</a>.</p>
 
 <!-- Google Analytics -->
 <script type="text/javascript">
